<resources>
    <string name="app_name">Bits EOn</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="username">Your Full Name</string>
    <string name="password_hint">Password</string>
    <string name="organiser">Organizer</string>
    <string name="bank_acc_no">Bank Acc No</string>
    <string name="ifsc_code">IFSC Code</string>
    <string name="bank_name">Bank Name</string>
    <string name="next">Next</string>
    <string name="password_restriction_hint">Password must be of length 8-16 characters having one lower case, one upper case and one numeric character.</string>

    <string name="subscriber">Subscriber</string>
    <string name="register">Register</string>
    <string name="details">Please provide the following details</string>
    <string name="organisation_name">Enter Organization Name</string>
    <string name="email_id">Email</string>
    <string name="contact_details">Enter Contact Details</string>
    <string name="address_detail">Enter Address Details</string>
    <string name="address">Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_password">Create Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="reset">Reset</string>

    <string name="event_detail">Event Details</string>
    <string name="org_name">Organization Name</string>
    <string name="update">Update</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="send_update">Send Updates</string>
    <string name="add_invitees">Add Invitees</string>


    <string name="download">Download</string>
    <string name="send_feedback">Submit Feedback</string>
    <string name="cancel">Cancel</string>

    <string name="reset_password">Reset Password</string>
    <string name="verification_code">Enter the verification code</string>
    <string name="verification_code_text">A verification code has been sent to the registered email ID</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="create_new_password">Create New Password</string>
    <string name="password_set_message">Your Password has been updated successfully</string>

    <string name="share_intent_title">Whatsapp</string>
    <string name="share_whatsapp_not_installed">Whatsapp not installed</string>

    <string name="facebook_app_id">544312269603763</string>

    <string name="send_updates">Send updates</string>
    <string name="prompt_drop_down">Status</string>
    <string name="send_reminder">Send reminders</string>

    <string name="rupee_symbol">\u20B9</string>

    <string name="share_event_text">Share this event with your friend</string>

    <string name="subscribed_event_text">  *Click on "Download" for event details and QR code </string>
    <string name="decreasing_attendees">No. of attendees has been updated to  </string>
    <string name="decreasing_total_amount">Total amount paid for 4 tickets is Rs.</string>
    <string name="decreasing_refund_text">Total amount refundable to you Rs.1450 </string>
    <string name="event_cancel_text">For this event cancellation, your complete amount will be refunded</string>
    <string name="i_hereby_agree">I hereby agree with the terms and conditions</string>
    <string name="terms_and_condition_title">Terms &amp; Conditions</string>
    <string name="terms_and_condition_value">BITS - Pilani and Eon Introduction These Website Standard Terms and Conditions written on this webpage shall manage your use of our website, Webiste Name accessible at Website.com. These Terms will be applied fully and affect to your use of this Website. By using this Website, you agreed to accept all terms and conditions written in here. You must not use this Website if you disagree with any of these Website Standard Terms and Conditions. Minors or people below 18 years old are not allowed to use this Website. Intellectual Property Rights Other than the content you own, under these Terms, Company Name and/or its licensors own all the intellectual property rights and materials contained in this Website. You are granted limited license only for purposes of viewing the material contained on this Website. Restrictions You are specifically restricted from all of the following.</string>
    <string name="contact_admin">Your Registration with EOn is completed! Please contact Admin for activation of your account.</string>
    <string name="no_data">No events found</string>

    <string name="revenue_earned">\u20B9 %s</string>
    <string name="bank_details">Bank Details</string>


    <string name="cancel_event_subscription">Cancel Event Subscription</string>
    <string name="cancel_subs_description">Your subscription for this event will be cancelled. All the money paid will be refunded to you.</string>
</resources>
