<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.auth.fragments.SignInFragment"
        android:orientation="vertical"
        android:background="@color/white"
        android:paddingTop ="@dimen/_20dp"
        android:paddingBottom ="@dimen/_20dp"
        android:paddingRight="@dimen/_40dp"
        android:paddingLeft="@dimen/_40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textStyle="bold"
            android:textColor="@color/appColor"
            android:padding="@dimen/_10dp"
            android:textSize="@dimen/_20fs"
            android:layout_gravity="center_horizontal"
            />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/organiser"
        android:textStyle="bold"
        android:textColor="@color/appColor"
        android:textSize="@dimen/_20fs"
        android:layout_gravity="left"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailAddressWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/TextLabel"
        android:layout_marginTop="@dimen/_10dp"
        app:setError="@{}"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/etEmailNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:text = "@={}"
            android:hint="@string/username"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/TextLabel"
        android:layout_below="@id/emailAddressWrapper"
        android:layout_marginTop="@dimen/_10dp"
        app:endIconMode="password_toggle"
        app:setError="@{}"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:text = "@={}"
            android:hint="@string/password_hint"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@color/appColor"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_gravity="right"
        android:clickable="true"
        android:onClick="@{}"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/white"
        android:background="@drawable/bg_button_rounded_corners"
        android:layout_marginTop="@dimen/_20dp"
        android:clickable="true"
        android:onClick="@{}"/>

</LinearLayout>