<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_20fs"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical|left"
            android:layout_marginStart="@dimen/_50sdp"
            android:textColor="@color/white"
            android:text="Change Password"/>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_close"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="@dimen/_24dp"
            android:layout_height="@dimen/_24dp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:background="@drawable/ic_arrow_back" />

    </RelativeLayout>


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_basic_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:drawableLeft="@drawable/ic_icon_mail_grey"
            android:drawablePadding="@dimen/_2sdp"
            android:background="@drawable/rounded_corner_grey_4"
            android:gravity="center_vertical|left"
            android:hint="@string/email_id"
            android:padding="@dimen/_8sdp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_current_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/rounded_corner_grey_4"
            android:gravity="center_vertical|left"
            android:hint="@string/old_password"
            android:inputType="textPassword"
            android:padding="@dimen/_8sdp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_create_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/rounded_corner_grey_4"
            android:gravity="center_vertical|left"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:padding="@dimen/_8sdp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/rounded_corner_grey_4"
            android:gravity="center_vertical|left"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="@dimen/_8sdp"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/_20dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_password_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_grey_4"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:padding="@dimen/_4sdp"
            android:text="Cancel"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_password_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_blue_cruve"
        android:backgroundTint="@color/colorPrimary"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_marginLeft="@dimen/_20dp"
        android:padding="@dimen/_4sdp"
        android:text="@string/reset"
        android:textAllCaps="false"
        android:textColor="@color/white" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>