<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/iv_cross"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:src="@drawable/ic_icon_grey_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/iv_cross">

        <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_terms_and_condition_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/terms_and_condition_title"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView

                android:id="@+id/tv_terms_and_condition_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/terms_and_condition_value"
                android:textColor="@color/grey"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/tv_terms_and_condition_title" />

            <LinearLayout
                android:id="@+id/ll_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/tv_terms_and_condition_value">

                <CheckBox
                    android:id="@+id/cb_tnc"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp" />

                <TextView
                    android:id="@+id/tv_i_agree"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginStart="@dimen/_10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:gravity="center"
                    android:text="@string/i_hereby_agree"
                    android:textColor="@color/grey"
                    android:textStyle="bold" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_accept"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_blue_cruve"
                android:text="Accept"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_checkbox" />

            <View
                android:layout_width="match_parent"
                android:layout_height="40dp"
                app:layout_constraintTop_toBottomOf="@id/btn_accept" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>