<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_50sdp"
                android:gravity="center_vertical|left"
                android:text="@string/profile"
                android:textColor="@color/white"
                android:textSize="@dimen/_20fs" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_close"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="@dimen/_24dp"
                android:layout_height="@dimen/_24dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_16sdp"
                android:background="@drawable/ic_arrow_back" />
        </RelativeLayout>


        <!--organization input-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_org_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/rounded_corner_grey_4"
            android:padding="@dimen/_18dp"
            android:theme="@style/TextLabel"
            android:visibility="visible">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/rdt_org_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_2dp"
                android:layout_marginBottom="@dimen/_10dp"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/ic_icon_basic_details_grey"
                android:drawableLeft="@drawable/ic_icon_basic_details_grey"
                android:drawablePadding="@dimen/_6sdp"
                android:gravity="center_vertical|left"
                android:hint="Organization Name"
                android:inputType="text"
                android:textColorHint="@color/grey"
                android:textSize="@dimen/_18fs" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--name input-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_basic_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/rounded_corner_grey_4"
            android:hint="@string/name"
            android:padding="@dimen/_18dp"
            android:theme="@style/TextLabel"
            android:visibility="visible">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/rdt_basic_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_2dp"
                android:layout_marginBottom="@dimen/_10dp"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/ic_user"
                android:drawableLeft="@drawable/ic_user"
                android:drawablePadding="@dimen/_6sdp"
                android:gravity="center_vertical|left"
                android:inputType="text"
                android:textColorHint="@color/grey"
                android:textSize="@dimen/_18fs" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--email input-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_basic_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/rounded_corner_grey_4"
            android:hint="Email"
            android:padding="@dimen/_18dp"
            android:theme="@style/TextLabel">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/rdt_basic_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_2dp"
                android:layout_marginBottom="@dimen/_10dp"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/ic_icon_mail_grey"
                android:drawableLeft="@drawable/ic_icon_mail_grey"
                android:drawablePadding="@dimen/_6sdp"
                android:gravity="center_vertical|left"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/grey"
                android:textSize="@dimen/_18fs" />

        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@color/zxing_transparent"
            android:theme="@style/CircularProgress"
            android:visibility="gone" />
        <!--contact input-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_basic_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/rounded_corner_grey_4"
            android:padding="@dimen/_18dp"
            android:theme="@style/TextLabel">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/rdt_basic_contact"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_2dp"
                android:layout_marginBottom="@dimen/_10dp"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/ic_icon_phone_grey"
                android:drawableLeft="@drawable/ic_icon_phone_grey"
                android:drawablePadding="@dimen/_6sdp"
                android:gravity="center_vertical|left"
                android:hint="Contact No."
                android:inputType="number"
                android:maxLength="10"
                android:textColorHint="@color/grey"
                android:textSize="@dimen/_18fs" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_basic_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:autofillHints="Organisation Address"
            android:background="@drawable/rounded_corner_grey_4"
            android:gravity="start|top"
            android:hint="Enter Address"
            android:inputType="textMultiLine"
            android:lines="8"
            android:minLines="3"
            android:padding="@dimen/_8sdp"
            android:scrollbars="vertical"
            android:singleLine="false" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/interest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:text="Select Interests"
            android:textColor="@color/grey"
            android:textSize="15sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_24sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_32sdp"
            android:layout_marginBottom="@dimen/_32sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_basic_cancel"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_2sdp"
                android:background="@drawable/rounded_corner_grey_4"
                android:padding="@dimen/_4sdp"
                android:text="Cancel"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_basic_confirm"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:background="@drawable/bg_blue_cruve"
                android:backgroundTint="@color/colorPrimary"
                android:padding="@dimen/_4sdp"
                android:text="@string/update"
                android:textAllCaps="false"
                android:textColor="@color/white" />

        </LinearLayout>


    </LinearLayout>
</ScrollView>